cluster-setup/resources/ingress/jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    spec.ingressClassName: nginx
    #cert-manager.io/cluster-issuer: "letsencrypt"
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.domain.placeholder
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jenkins
            port: 
              number: 8080
  tls:
  - hosts:
    - jenkins.domain.placeholder
    #secretName: jenkins-tls
