cluster-setup/resources/ingress/k8-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-dashboard-ingress
  namespace: kube-system
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
    #cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
  - host: kubernetes.domain.placeholder
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
  tls:
  - hosts:
    - kubernetes.domain.placeholder
    #secretName: k8-dashboard-tls
